# GasesFalloutSpectrum

./: CMakeLists.txt  README.md
gases/CN/: CN_配置文件.txt  CN分子.docx
gases/CN/Aul/: A2pai-X2sigema.txt  B-X(13).TXT  B-X0-3.TXT  B-X0.txt
gases/CN/势能曲线/: 基态X2sigema势能曲线.txt  激发态A2pai势能曲线.txt  激发态B2sigema势能曲线.txt  激发态D2pai势能曲线.txt  激发态E2sigema势能曲线.txt  激发态a4sigema势能曲线.txt  激发态b4pai势能曲线.txt  激发态c4deta势能曲线.txt  激发态d4sigema-势能曲线.txt
gases/CN/振转能级/: 基态X2sigma振转能级.txt  激发态A2pai振转能级.txt  激发态B2sigema振转能级.txt  激发态D2pai振转能级.txt  激发态E2sigema振转能级.txt  激发态a4sigema振转能级.txt  激发态b4pai振转能级.txt  激发态c4deta振转能级.txt  激发态d4sigema振转能级.txt
gases/CN2/: B3pai-A3sigmaall-N2.txt  N2_配置文件.txt  N2分子.docx
gases/CN2/N2-Aul/: C3pai-B3pai.txt
gases/CO/: A1pai-X1sigmaall-CO.txt  CO_配置文件.txt  CO分子.docx  CO分子new.docx
gases/CO/LastScanSpectra/: 1.txt  2.txt  4.txt  A1PitoX1S_energyspectrum.txt  A1PitoX1Snew.f90  B1StoA1P_energyspectrum.txt  B1StoA1Pnew.f90  B1StoX1S_energyspectrum.txt  B1StoX1Snew.f90  spectpositionLAST.nb  抬头.txt
gases/CO/Q配分函数/: 1-7-9-10.nb  2.nb  3-5.nb  4.nb  6.nb  8.nb  Q10激发态C1sigema振转能级.txt  Q1基态X1sigema振转能级.txt  Q2激发态a3pai振转能级.txt  Q3激发态a'3sigema振转能级.txt  Q4激发态d3deta振转能级.txt  Q5激发态e3sigema振转能级.txt  Q6激发态A1pai振转能级.txt  Q7激发态I1sigema振转能级.txt  Q8激发态D1deta振转能级.txt  Q9激发态B1sigema振转能级.txt
gases/CO/Q配分函数/FortranCode/: Qout.txt  dxpp.f90  in1rovib.txt  out.txt  xx1.txt
gases/CO/振动能级/: 基态X1sigema振动能级.txt  激发态A1pai振动能级.txt  激发态B1sigema振动能级.txt  激发态C1sigema振动能级.txt  激发态D1deta振动能级.txt  激发态I1sigema振动能级.txt  激发态a'3sigema振动能级.txt  激发态a3pai振动能级.txt  激发态d3deta振动能级.txt  激发态e3sigema振动能级.txt
gases/CO/振转能级/: 6激发态A1pai振转能级.txt  9激发态B1sigema振转能级.txt  基态X1sigema振转能级short.txt  激发态B1sigema振转能级short.txt
gases/CO/爱因斯坦系数Aul/: Aul(B1sigema-A1pai)of CO.txt  吸收基准-+1=j1-j2.txt
src/csrc/: cpextend.cpp  cpextend.h  cpfundation.cpp  cpfundation.h  modelspec.h  stringutils.h
src/csrc_old/: computecurve.cpp  computecurve.h  computefundation.cpp  computefundation.h  fileutils.h  mainwindow2.cpp  mainwindow2.h  middleware.cpp  middleware.h
src/qsrc/: mainwindow.cpp  mainwindow.h  qinterface.cpp  qinterface.h
src/qwidget/: qtimerprogressbar.cpp  qtimerprogressbar.h  qtitlebar.cpp  qtitlebar.h
src/res/: mipmap.qrc
